# premix-orm

./: .clippy.toml  .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  GOVERNANCE.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SUPPORT.md  ZERO_OVERHEAD_AUDIT.md  audit.toml  run_bench.ps1  run_bench_direct.ps1
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: io_benchmark.rs  orm_comparison.rs  premix_vs_sqlx.rs
benchmarks/results/: summary.csv
benchmarks/results/criterion_round_1_20260119_114602/bulk operations (1000 rows)/bulk_update_1000/change/: estimates.json
benchmarks/results/criterion_round_1_20260119_114602/bulk operations (1000 rows)/bulk_update_1000/new/: estimates.json  sample.json  tukey.json
benchmarks/results/criterion_round_1_20260119_114602/bulk operations (1000 rows)/bulk_update_1000/report/: index.html
benchmarks/results/criterion_round_1_20260119_114602/bulk operations (1000 rows)/loop_update_1000/base/: sample.json
benchmarks/results/criterion_round_1_20260119_114602/bulk operations (1000 rows)/loop_update_1000/change/: estimates.json
benchmarks/results/criterion_round_1_20260119_114602/bulk operations (1000 rows)/loop_update_1000/new/: estimates.json  tukey.json
benchmarks/results/criterion_round_1_20260119_114602/bulk operations (1000 rows)/loop_update_1000/report/: index.html
benchmarks/results/criterion_round_1_20260119_114602/bulk operations (1000 rows)/report/: index.html
benchmarks/results/criterion_round_1_20260119_114602/bulk relation (50 users -_ 500 posts)/lazy_loading_100_users/base/: estimates.json
benchmarks/results/criterion_round_1_20260119_114602/bulk relation (50 users -_ 500 posts)/lazy_loading_100_users/change/: estimates.json
benchmarks/results/criterion_round_1_20260119_114602/bulk relation (50 users -_ 500 posts)/lazy_loading_100_users/new/: sample.json  tukey.json
benchmarks/results/criterion_round_1_20260119_114602/bulk relation (50 users -_ 500 posts)/lazy_loading_100_users/report/: index.html
benchmarks/results/criterion_round_1_20260119_114602/bulk relation (50 users -_ 500 posts)/premix_eager_batch/base/: estimates.json
benchmarks/results/criterion_round_1_20260119_114602/bulk relation (50 users -_ 500 posts)/premix_eager_batch/change/: estimates.json
benchmarks/results/criterion_round_1_20260119_114602/bulk relation (50 users -_ 500 posts)/premix_eager_batch/new/: sample.json  tukey.json
benchmarks/results/criterion_round_1_20260119_114602/bulk relation (50 users -_ 500 posts)/premix_eager_batch/report/: index.html
benchmarks/results/criterion_round_1_20260119_114602/bulk relation (50 users -_ 500 posts)/rbatis_bulk_manual/base/: estimates.json  sample.json
benchmarks/results/criterion_round_1_20260119_114602/bulk relation (50 users -_ 500 posts)/rbatis_bulk_manual/change/: estimates.json
benchmarks/results/criterion_round_1_20260119_114602/bulk relation (50 users -_ 500 posts)/rbatis_bulk_manual/new/: tukey.json
benchmarks/results/criterion_round_1_20260119_114602/select (4-way)/report/: index.html
benchmarks/results/criterion_round_1_20260119_114602/transactions/report/: index.html
benchmarks/results/criterion_round_1_20260119_120639/bulk select 100 rows/report/: index.html
benchmarks/results/criterion_round_1_20260119_120639/insert (4-way)/report/: index.html
benchmarks/results/criterion_round_1_20260119_120639/relation (1 user -_ 10 posts)/report/: index.html
benchmarks/results/criterion_round_1_20260119_120639/soft delete/report/: index.html
benchmarks/results/criterion_round_3_20260119_123023/bulk relation (50 users -_ 500 posts)/report/: index.html
benchmarks/results/criterion_round_3_20260119_123023/io concurrency (postgres)/report/: index.html
benchmarks/results/criterion_round_3_20260119_123023/io insert (postgres)/report/: index.html
benchmarks/results/criterion_round_3_20260119_123023/io select (postgres)/report/: index.html
benchmarks/results/criterion_round_3_20260119_123023/modify operations/report/: index.html
benchmarks/results/criterion_round_3_20260119_123023/optimistic locking/report/: index.html
benchmarks/results/criterion_round_3_20260119_123023/report/: index.html
examples/axum-app/: Cargo.toml  api.http
examples/axum-app/src/: main.rs
examples/basic-app/: Cargo.toml
examples/basic-app/src/: main.rs
examples/bulk-ops-app/: Cargo.toml
examples/bulk-ops-app/src/: main.rs
examples/optimistic-locking-app/: Cargo.toml
examples/optimistic-locking-app/src/: main.rs
examples/premix-axum-tutorial/: Cargo.toml  premix_axum_demo.db  test.http  test_api.ps1
examples/premix-axum-tutorial/src/: main.rs
examples/soft-delete-app/: Cargo.toml
examples/soft-delete-app/src/: main.rs
examples/tracing-app/: Cargo.toml
examples/tracing-app/src/: main.rs
orm-book/book-examples/: Cargo.toml
orm-book/book-examples/src/: lib.rs
orm-book/book-examples/tests/: bulk_ops.rs  getting_started.rs  migrations.rs  models.rs  multi_db.rs  queries.rs  relations.rs  transactions.rs  validation_hooks.rs
premix-actix/: Cargo.toml  README.md
premix-actix/src/: lib.rs
premix-axum/: Cargo.toml  README.md
premix-cli/: Cargo.toml  README.md
premix-cli/src/: main.rs  source_scan.rs
premix-cli/tests/: cli_main.rs
premix-core/: Cargo.toml  README.md
premix-core/src/: dialect.rs  error.rs  executor.rs  lib.rs  metrics.rs  migrator.rs  model.rs  query.rs  schema.rs  send_test.rs  sql_cache.rs  test_utils.rs
premix-core/tests/: migrator_sqlite.rs  security_fuzz.rs
premix-macros/: Cargo.toml  README.md
premix-macros/src/: lib.rs  relations.rs  static_query.rs
premix-macros/tests/: derive_model.rs
premix-metrics/: Cargo.toml  README.md
premix-orm/: Cargo.toml  README.md
premix-orm/src/: lib.rs
premix-orm/src/integrations/: axum.rs  mod.rs
premix-orm/tests/: belongs_to_eager.rs  integration_mysql.rs  integration_postgres.rs  integration_sqlite.rs  metrics_sqlite.rs  relations_edge.rs  schema_migration_sqlite.rs
(+1146 files in other folders)
