[workspace]
members = [
    "premix-core",
    "premix-macros",
    "premix-orm",
    "premix-cli",
    "premix-actix",
    "premix-axum",
    "premix-metrics",
    "benchmarks",
    "examples/*",
]

resolver = "2"
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "allow"
print_stdout = "allow"
str_to_string = "warn"
cast_lossless = "warn"
needless_borrow = "warn"
