[workspace]
# รายชื่อ Crate ทั้งหมดที่อยู่ในโปรเจกต์นี้ (Workspace Members)
members = [
    "premix-core",   # Core Engine: จัดการ SQL Logic และ Database Interaction
    "premix-macros", # Derive Macros: ส่วนที่ทำ Code Generation (`#[derive(Model)]`)
    "premix-orm",    # Facade: Crate หลักที่ User จะเรียกใช้งาน (รวม core + macros เข้าด้วยกัน)
    "premix-cli",    # CLI Tool: เครื่องมือจัดการ Migration และ Scaffolding
    "benchmarks",    # Performance Testing: ชุดทดสอบความเร็วเทียบกับ ORM อื่น
    "examples/*",    # Example Apps: รวมตัวอย่างการเขียนโค้ดรูปแบบต่างๆ
]

resolver = "3" # ใช้ระบบจัดการ Dependency แบบใหม่ของ Rust (Edition 2024)
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow noisy or impractical pedantic lints
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
# Custom overrides
unwrap_used = "allow"
print_stdout = "allow"
str_to_string = "warn"
cast_lossless = "warn"
needless_borrow = "warn"
