[package]
name = "benchmarks"
version = "0.1.0"
edition = "2024"


[features]
default = ["sqlite"]
sqlite = ["premix-core/sqlite", "sqlx/sqlite"]
postgres = ["premix-core/postgres", "sqlx/postgres"]

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio"] }
criterion = { version = "0.8.1", features = ["async_tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4", features = ["serde"] }

# Premix
premix-core = { path = "../premix-core" }
premix-macros = { path = "../premix-macros" }
premix-orm = { path = "../premix-orm" }

# Competitors
sea-orm = { version = "1.1.19", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-native-tls",
] }
rbatis = "4.6.15"
rbs = "4.6.0"
rbdc-sqlite = "4.6.2"
rbdc-pg = "4.6.3"


[[bench]]
name = "orm_comparison"
harness = false

[[bench]]
name = "io_benchmark"
harness = false
required-features = ["postgres"]
