[package]
name = "premix-cli"
version = "1.0.0"
edition = "2024"
description = "Command-line tool for Premix ORM (Migration management and more)."
license = "MIT"
repository = "https://github.com/premix-labs/premix-orm"
keywords = ["orm", "cli", "database", "migration"]
categories = ["database", "development-tools::cargo-plugins"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
premix-core = { version = "1.0.0", path = "../premix-core" }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
syn = { version = "2.0.114", features = ["full"] }
quote = "1.0.43"
walkdir = "2.5.0"
chrono = "0.4"
