[package]
name = "premix-core"
version = "1.0.5"
edition = "2024"
description = "A Zero-Overhead, Type-Safe ORM for Rust that runs optimized SQL."
license = "MIT"
readme = "README.md"
repository = "https://github.com/premix-labs/premix-orm"
keywords = ["orm", "database", "sql", "async", "performance"]
categories = ["database", "asynchronous"]
[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]

[dependencies]
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "macros",
], default-features = false }
tracing = "0.1.44"
async-trait = "0.1.89"
serde = "1.0.228"
serde_json = "1.0.149"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
