[package]
name = "premix-macros"
version = "1.0.5-alpha"
edition = "2024"
description = "Proc-macros for Premix ORM."
license = "MIT"
readme = "README.md"
repository = "https://github.com/premix-labs/premix-orm"

[lib]
proc-macro = true # <--- This line is very important!

[dependencies]
syn = "2.0.114"         # Parser: Reads Rust code (Struct)
quote = "1.0.43"        # Generator: Generates Rust code back
proc-macro2 = "1.0.105" # Bridge

[dev-dependencies]
premix-core = { path = "../premix-core" }
tokio = { version = "1", features = ["full"] }
premix-orm = { path = "../premix-orm" }
