[package]
name = "premix-macros"
version = "1.0.9-alpha"
edition = "2024"
description = "Proc-macros for Premix ORM."
license = "MIT"
readme = "README.md"
repository = "https://github.com/premix-labs/premix-orm"

[lib]
proc-macro = true # บอก Rust ว่า Crate นี้คือ "Compiler Plugin" (จะถูก Run ตอน Compile Time เท่านั้น)

[dependencies]
# -------------------------------------------------------------------------
# The "Holy Trinity" of Proc Macros
# -------------------------------------------------------------------------
syn = "2.0.114"         # Parser: มีหน้าที่อ่าน Rust Code (Struct) แล้วแปลงเป็น Syntax Tree (AST) ให้เราแก้
quote = "1.0.43"        # Generator: มีหน้าที่สร้าง Rust Code ใหม่กลับออกมา (เหมือนพิมพ์ Code โดยใช้ตัวแปรได้)
proc-macro2 = "1.0.105" # Bridge: เป็นตัวเชื่อมให้เราเขียน Unit Test ได้ (เพราะ `proc_macro` ของจริงเทสยาก)

[dev-dependencies]
premix-core = { path = "../premix-core" }
tokio = { version = "1", features = ["full"] }
premix-orm = { path = "../premix-orm" }
