[package]
name = "premix-metrics"
version = "0.1.0"
edition = "2024"
description = "Prometheus metrics helpers for Premix ORM."
license = "MIT"
repository = "https://github.com/premix-labs/premix-orm"

[dependencies]
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
sqlx = { version = "0.8", default-features = false }
