[package]
name = "premix-orm"
version = "1.0.2"
edition = "2024"
description = "The comprehensive ORM library for Rust. This is a facade crate for premix-core and premix-macros."
license = "MIT"
repository = "https://github.com/premix-labs/premix-orm"
readme = "README.md"
keywords = ["orm", "database", "sql"]
categories = ["database"]

[features]
default = ["sqlite"]
sqlite = ["premix-core/sqlite"]
postgres = ["premix-core/postgres"]
mysql = ["premix-core/mysql"]

[dependencies]
premix-core = { version = "1.0.2", path = "../premix-core" }
premix-macros = { version = "1.0.2", path = "../premix-macros" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
