[package]
name = "premix-orm"
version = "1.0.5-alpha"
edition = "2024"
description = "Alpha research ORM for Rust. Facade crate for premix-core and premix-macros (not production-ready)."
license = "MIT"
repository = "https://github.com/premix-labs/premix-orm"
readme = "README.md"
keywords = ["orm", "database", "sql"]
categories = ["database"]

[features]
default = ["sqlite"]
sqlite = ["premix-core/sqlite"]
postgres = ["premix-core/postgres"]
mysql = ["premix-core/mysql"]

[dependencies]
premix-core = { version = "1.0.5-alpha", path = "../premix-core" }
premix-macros = { version = "1.0.5-alpha", path = "../premix-macros" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
