[package]
name = "bulk-ops-app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
premix-core = { path = "../../premix-core" }
premix-macros = { path = "../../premix-macros" }
premix-orm = { path = "../../premix-orm" }
