[package]
name = "optimistic-locking-app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
premix-core = { path = "../../premix-core" }
premix-macros = { path = "../../premix-macros" }
premix-orm = { path = "../../premix-orm" }
