[package]
name = "premix-axum-tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
premix-core = { path = "../../premix-core" }
premix-macros = { path = "../../premix-macros" }
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
