[package]
name = "premix-orm-book-examples"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
premix-core = { path = "../../premix-core", features = ["sqlite"] }
premix-orm = { path = "../../premix-orm", features = ["sqlite"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[workspace]
